# mini-swe-agent

./: .gitignore  Cargo.toml  Justfile  README.md  agent-task.json  agent-task.json.example  flake.nix
crates/actors/: Cargo.toml
crates/actors/src/: arg_normalizer.rs  constraint_checker.rs  event_bus.rs  event_logger.rs  lib.rs  orchestrator.rs  policy_messages.rs  task_actor.rs  tool_router.rs  toolbox.rs
crates/actors/src/templates/: instance.j2  system.j2
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  config_loader.rs  exit.rs  logging.rs  main.rs  wiring.rs
crates/core/: Cargo.toml
crates/core/src/: capability.rs  cluster.rs  config.rs  error.rs  event.rs  lib.rs  message.rs  observation.rs  policy.rs  task.rs  tool_call.rs  toolbox.rs
crates/core/tests/: props.rs  unit.rs
crates/environments/: Cargo.toml
crates/environments/src/: file_ops.rs  lib.rs  session.rs  shell_worker.rs  value_to_observation.rs
crates/models/: Cargo.toml
crates/models/src/: actor.rs  client.rs  extract.rs  lib.rs  sse.rs
crates/nu-plugin-mswea/: Cargo.toml
crates/nu-plugin-mswea/src/: lib.rs  main.rs  plugin.rs
crates/nu-plugin-mswea/src/commands/: mod.rs
crates/nu-plugin-mswea/src/commands/cargo/: check.rs  mod.rs  test.rs
crates/nu-plugin-mswea/src/commands/rpc/: advance.rs  halt.rs  mod.rs  record_attempt.rs  record_orient.rs  task_state.rs  write_coverage_plan.rs
skills/: rust-actor-tests.md  rust-proptests.md
src/flake/: container.dhall  container.nix
tools/compile/: check.nu  fix-hint.nu  interfaces.nu
tools/create/: cargo-test-entry.nu  dev-dep.nu  interfaces.nu  test-file.nu  tests-dir.nu
tools/discovery/: interfaces.nu
tools/extract/: actor.nu  cargo-toml.nu  file.nu  interfaces.nu  range.nu  symbol.nu
tools/fmt/: apply.nu  check.nu  interfaces.nu
tools/lint/: check.nu  interfaces.nu
tools/locate/: actors.nu  deps.nu  derives.nu  files.nu  interfaces.nu  symbols.nu  tests.nu
tools/meta/: help.nu  interfaces.nu  loop-detect.nu  orient-report.nu  step-verify.nu  trajectory-summary.nu
tools/playbook/: current-step.nu  interfaces.nu  lookup.nu
tools/playbooks/: write-tests.nu
tools/task/: advance.nu  block.nu  evaluate-coverage-plan.nu  halt.nu  interfaces.nu  next.nu  record-attempt.nu  state.nu  write-coverage-plan.nu
tools/test/: count.nu  interfaces.nu  run.nu  verify-coverage.nu
