[package]
name = "actors"
version.workspace = true
edition.workspace = true

[dependencies]
mswea-core = { path = "../core" }
environments = { path = "../environments" }

tokio.workspace = true
ractor.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true
