[package]
name = "actors"
version.workspace = true
edition.workspace = true

[dependencies]
mswea-core = { path = "../core" }
environments = { path = "../environments" }

tokio.workspace = true
ractor.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true
minijinja.workspace = true
nu-protocol.workspace = true
axum.workspace = true
chrono.workspace = true
rcgen.workspace = true
rustls.workspace = true
axum-server.workspace = true
