[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mswea"
path = "src/main.rs"

[dependencies]
mswea-core = { path = "../core" }
models = { path = "../models" }
environments = { path = "../environments" }
actors = { path = "../actors" }

tokio.workspace = true
ractor.workspace = true
ractor_cluster.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
dirs.workspace = true
dotenv.workspace = true
rcgen.workspace = true
