[package]
name = "mswea-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rkyv.workspace = true
thiserror.workspace = true
ulid.workspace = true
chrono.workspace = true
tracing.workspace = true
nu-protocol.workspace = true
anyhow.workspace = true
