[package]
name = "environments"
version.workspace = true
edition.workspace = true

[dependencies]
mswea-core = { path = "../core" }
nu-plugin-mswea = { path = "../nu-plugin-mswea" }

tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true

# nushell embedding
nu-engine.workspace = true
nu-parser.workspace = true
nu-protocol.workspace = true
nu-cmd-lang.workspace = true
nu-command.workspace = true
nu-plugin-engine.workspace = true
nu-plugin.workspace = true
rustls = { workspace = true }

[dev-dependencies]
tempfile = "3"
