[package]
name = "models"
version.workspace = true
edition.workspace = true

[dependencies]
mswea-core = { path = "../core" }

tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
backon.workspace = true
ulid.workspace = true
